# Find3D

./: 00_README_CONVERTER.md  3D_CONVERTER_GUIDE.md  COMPREHENSIVE_README.md  CONVERTER_IMPLEMENTATION.md  CONVERTER_QUICKSTART.md  GRADIO_GUIDE.md  GRADIO_INTERFACE.md  GRADIO_README.md  INSTALLATION.md  README.md  SETUP_COMPLETE.md  TORCH_UPDATE.md  activate_find3d.sh  convert_3d_to_pcd.py  cube_pointcloud.pcd  generate_example_models.py  gradio_app.py  pyproject.toml  test_converter_setup.py  test_gradio_setup.py  torch_scatter_compat.py
cli/: __main__.py  gradio_app.py  main.py
converted/: cube_pointcloud.pcd  pyramid_pointcloud.pcd  sphere_pointcloud.pcd  torus_pointcloud.pcd
find3d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
model/backbone/pt3/: model.py
model/evaluation/: utils.py
